gcc/testsuite/rust/rustc/ui/issues/issue-2718-a.rs
pub struct SendPacket<T> {
    p: T
}

mod pingpong {
    use SendPacket;
    pub type Ping = SendPacket<Pong>;
    pub struct Pong(SendPacket<Ping>);
// { dg-error ".E0072." "" { target *-*-* } .-1 }
}

fn main() {}

